Code cleaning
(cherry picked from commit b8ae3854edcc0fd2b3d56efad72b4f4da2c9768a)